# DaisyProj

./: .gitmodules  Makefile  README.md  helper.py
ci/: build_libs.sh
libDaisy/cmake/: default_build.cmake
libDaisy/core/: Makefile
seed/CrLib/: CMakeLists.txt  Doxyfile  Makefile  crlib.h
seed/CrLib/Drums/: adbass.cpp  adbass.h
seed/CrLib/Source/: crlib.h
seed/CrLib/Source/Control/: adenv.cpp  adenv.h  adsr.cpp  adsr.h
seed/CrLib/Source/Drums/: adbass.cpp  adbass.h  adsrosc.cpp  adsrosc.h  adwnoise.cpp  adwnoise.h  analogbassdrum.cpp  analogbassdrum.h  analogsnaredrum.cpp  analogsnaredrum.h
seed/CrLib/Source/Dynamics/: limiter.cpp  limiter.h
seed/CrLib/Source/Filters/: svf.cpp  svf.h
seed/CrLib/Source/Noise/: whitenoise.h
seed/CrLib/Source/Synthesis/: oscillator.cpp  oscillator.h
seed/CrLib/Source/Utility/: dsp.h  metro.cpp  metro.h
seed/Drum_Machine/: Drum_Machine.cpp  Drum_Machine.h  Makefile  README.md
utils/Template/: Makefile
